# MusicBox

./: .pkgmeta  Core.lua  Init.lua  MusicBox.toc  MusicBox_TBC.toc  MusicBox_Vanilla.toc  MusicBox_Wrath.toc  Player.lua
GameMusic/: AreaIDMusicInfo.lua  GameMusic.lua  MusicBox_GameMusic.toc  MusicBox_GameMusic_TBC.toc  MusicBox_GameMusic_Vanilla.toc  MusicBox_GameMusic_Wrath.toc  SoundEntries.lua  UiMapIDToAreaInfos.lua  ZoneIntroMusicTable.lua  ZoneMusic.lua  ZoneSoundKitIDToFiledataIDs.lua  listfile.lua  listfile_music.lua  main.lua  zonefixup.lua
Icon/: Core.lua  MusicBox_Icon.toc  MusicBox_Icon_TBC.toc  MusicBox_Icon_Vanilla.toc  MusicBox_Icon_Wrath.toc
Mainline/: MusicBox_TBC.toc  MusicBox_Wrath.toc
MainlineMusic/: MusicBox_MainlineMusic_TBC.toc  MusicBox_MainlineMusic_Vanilla.toc  MusicBox_MainlineMusic_Wrath.toc  mainline.lua
MusicBox_GameMusic/: MusicBox_GameMusic_Mainline.toc  MusicBox_GameMusic_Vanilla.toc  (+2 more)
datasource/: CMakeLists.txt  UiMap.csv  UiMapAssignment.csv  UiMapAssignment_Classic.csv  ZoneIntroMusicTable.csv  ZoneMusic.csv  parser.cc  tb.txt
datasource/csvs/: AreaTable.csv  AreaTable_Classic.csv  Map.csv  SoundEntries [4.3.4] - SoundEntries.dbc.csv  SoundEntries.lua  UiMap_Classic.csv
datasource/csvs/AreaTable/: AreaTable_deDE.csv  AreaTable_esMX.csv  AreaTable_frFR.csv  AreaTable_itIT.csv  AreaTable_koKR.csv  AreaTable_ruRU.csv  AreaTable_zhTW.csv  enUS.csv  esES.csv  ptPT.csv  zhCN.csv
datasource/include/mci/: error.h  mci.h  mci_api_wrapper.h  play.h  status.h
datasource/src/: areatableloc.cc  listfile.cc  parser.cc  pch.hpp
(+43 files in other folders)
